* Mon Oct 19 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Discard X509_V_ERR_INVALID_PURPOSE errors in 
  GRST_callback_SSLVerify_wrapper(), needed by 
  OpenSSL 0.9.8e (Imported from 1.7.6)
* Mon Oct 19 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.16 ====
* Thu Sep 17 2009 Andrew McNab <Andrew.McNab@cern.ch>
- GRSThttpUrlEncode rather than GRSThttpUrlMildencode
  in mod_gridsite directory listings.
* Tue Sep 17 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.15 ====
* Tue Sep 15 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Import GRSTgaclUserFree() fix from 1.7.x branch
* Tue Sep 15 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.14 ====
* Wed Sep 9 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Import fix of %016lx specification when creating 
  passcodes from 1.7.x branch.
- Add gridsite-all RPM which includes the files from
  all subpackages.
* Fri Jul 24 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.13 ====
* Fri Jul 24 2009 Andrew McNab <Andrew.McNab@cern.ch>
- Back port fixes from 1.7.x, including:
-  Remove 2 argument open(...O_CREAT...) instance in
   grst_admin_file.c
-  Change (GRSTerrorLogFunc) to return int, to allow 
   if-less C macro using && instead.
-  Fix Bug #53314 due to change in VOMS (user cert DN 
   vs user cert issuer's DN)
-  Check multiple VOMS issuer certs if present, and
   use most permissive time range they provide to
   resolve Bug #53497
* Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.12 ====
* Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
- New version for various fixes imported from 1.7.3
- Use lib/lib64 for mod_gridsite.so in Makefile and 
  make-gridsite-spec
- DN list URL encoding bug in grst_gacl.c
- Don't export AURIs with errors
- Add VOMS LSC file support
* Fri Jul  3 2009 Andrew McNab <Andrew.McNab@cern.ch>
- ==== GridSite version 1.5.11 ====
* Mon Jun 23 2008 Andrew McNab <Andrew.McNab@man.ac.uk>